# ANFR-Hackathon-Demo-Challenge-1

./: LICENSE  README.md  detect_type.py  generate_all_graphs.py  graph1_pmes_vs_distance.py  graph2_lowess.py  graph3_geoplot.py  graph4_freq_vs_distance.py  graph5_heatmap.py  interface.py  predict.py  pyproject.toml  resultatsPL.py  testPolars.py  trainRandomForest.py  visualisation_pl.py
